--- a/style/style.css
+++ b/style/style.css
@@ -1,41 +1,43 @@
-body{
-    font-family:  sans-serif;
+body {
+  font-family: sans-serif;
 }
 
-.search{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    /* margin: 20px auto;
-    width: 70%; */
+th,
+td {
+    padding: 10px;
 }
 
-.search input{
-    padding: 5px;
-    margin:10px;
-
-}
-.formAddition{
-    background-color: rgb(179, 231, 231);
-    padding: 7px;
-    margin: 15px;
-    color: rgb(8, 8, 8);
-    text-decoration:none;
-    border: 3px solid rgb(147, 211, 211);
-    border-radius: 25px;
-    display: flex;
-    width: 190px;
-    justify-content: center
+.search {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.formAddition:hover{
-    background-color: rgb(88, 199, 199);
-    font-weight: 700;
+.search input {
+  padding: 5px;
+  margin: 10px;
+}
+
+.formAddition {
+  background-color: rgb(179, 231, 231);
+  padding: 7px;
+  margin: 15px;
+  color: rgb(8, 8, 8);
+  text-decoration: none;
+  border: 3px solid rgb(147, 211, 211);
+  border-radius: 25px;
+  display: flex;
+  width: 190px;
+  justify-content: center;
+}
+
+.formAddition:hover {
+  background-color: rgb(88, 199, 199);
+  font-weight: 700;
 }
 
 .cross:hover path {
   stroke: rgb(231, 0, 0);
-  /* fill: rgb(255, 255, 255);  */
 }
 
 .cross {
@@ -43,33 +45,35 @@ body{
   height: 20px;
 }
 
-.table{
-    min-width: 960px;
-    width: 100%;
-    margin: 20px auto;
-    text-align: center;
-}
-.cell  {
-    display: flex;
-    justify-content: center;
-
+.table {
+  min-width: 960px;
+  width: 100%;
+  margin: 20px auto;
+  text-align: center;
 }
 
-h3{
-    display: flex;
-    justify-content: center;
+.cell {
+  display: flex;
+  justify-content: center;
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
 }
 
 @media (max-width: 960px) {
-    body{
-        font-size: 60%;   
-    }
+  
+  body {
+    font-size: 60%;
+  }
 
-  .row{
+  .row {
     flex-wrap: nowrap;
   }
 
-  .formAddition{
+  .formAddition {
     width: 120px;
   }
+
 }
